--- a/css/styles.css
+++ b/css/styles.css
@@ -278,41 +278,35 @@ button:hover {cursor: pointer; transition:  0.6s ease-in-out; background-color: 
 
 .mtop0 {margin-top: 0px !important;}
 
-.slide2-section .container {display: flex; flex-direction: column;margin: auto;  justify-content: space-between; margin-bottom: 40px; row-gap: 10px; column-gap: 40px;}
+.slide2-section .container {display: flex; margin: auto; flex-wrap: wrap; justify-content: center; margin-bottom: 40px; row-gap: 50px; column-gap: 50px; align-items: stretch;}
 
-.slide2-section .container .row {column-gap: 60px;}
 
-.slide2-section .card {max-width: 470px; min-height: 210px;  margin-top: 0px; background-color: #fafafa; padding: 40px 50px; border-radius: 10px; column-gap: 30px;}
+.slide2-section .card {max-width: 600px; width: calc(50% - 150px);   background-color: #fafafa; 
+    padding: 40px 50px; border-radius: 10px; column-gap: 20px; position: relative; align-items: flex-start;
+    justify-content: center;    
+}
 
 .slide2-section .card img {height: 70px;}
 
-.slide2-section .card .texts {width: 100%; text-align: left;}
+/* .slide2-section .card .texts {width: 100%; text-align: left;} */
 
 .slide2-section .card h3 {padding-bottom: 10px; color: black; font-size: 25px;}
 
 .slide2-section .card p {font-weight: 500;}
 
-.slide2-section .item .blue-circle {display: flex; transition: 0.5s; font-size: 24px; font-family: "Poppins", sans-serif; border-radius: 100px; background-color: #00a6f3; color: white; padding: 10px; width: 35px; justify-content: center; align-items: center;}
+.slide2-section .card .blue-circle {display: flex; transition: 0.5s; font-size: 24px; font-family: "Poppins", sans-serif; border-radius: 100px; background-color: #00a6f3; color: white; padding: 10px; width: 35px; justify-content: center; align-items: center;}
 
-.slide2-section .item .blue-circle {position: relative; top: 32px; right: 20px; cursor: pointer;}
+.slide2-section .card .blue-circle {position: absolute; top: -30px; left: -20px; cursor: pointer;}
 
-.slide2-section .item .blue-circle:hover {transition: 0.5s;  box-shadow: 0 0 0 10px rgba(178, 215, 236, 0.5);}
-
-@media (max-width: 1430px){
-    .slide2-section .card {height: 65%;}
-}
-
-@media (max-width: 1250px){
-    .slide2-section .card { margin: auto; max-width: none; }
-    .slide2-section .card {display: block; max-height: none; text-align: center;}
-    .slide2-section .card .texts {width: 100%; text-align: center;}
-}
+.slide2-section .card .blue-circle:hover {transition: 0.5s;  box-shadow: 0 0 0 10px rgba(178, 215, 236, 0.5);}
 
 @media (max-width: 1000px){
-    /* .slide2-section .container {max-width: 570px;} */
-    .slide2-section .container .row {flex-direction: column;justify-content: center; row-gap: 10px;}
+    .slide2-section .card {max-width: 900px; width: 100%; }
 
+}
 
+@media (max-width: 480px){
+    .slide2-section .card { flex-direction: column; justify-content: center; align-items: center; text-align: center; }
 }
 
 
